# retoSquadmaker

./: .gitignore  README.md  jokes.db  main.py  mathematic.py  pyproject.toml  pytest.ini  requirements.txt  scheme.py
services/: api_jokes.py  mathematic.py
tests/: test_jokes.py  test_math.py
