[tool.poetry]
name = "reto_python_squadmaker"
version = "0.1.0"
description = "Reto de python de squadmarker"
authors = ["vidm27 <davidmoran464@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
pytest = "^7.1.2"
uvicorn = "^0.18.2"
requests = "^2.28.1"
databases = {extras = ["aiosqlite"], version = "^0.6.0"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
